[gd_scene load_steps=15 format=2]

[ext_resource path="res://terrain/DirtTiles.tres" type="TileSet" id=1]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://terrain/ShootableBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://items/Portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/Pie.tscn" type="PackedScene" id=6]
[ext_resource path="res://terrain/Movable block.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/dirtBackground.jpg" type="Texture" id=8]
[ext_resource path="res://assets/Music/undergroundCavern.ogg" type="AudioStream" id=9]
[ext_resource path="res://ui/StoryBox2.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/Instructions.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/goblin-portrait.png" type="Texture" id=12]
[ext_resource path="res://levels/Level1.gd" type="Script" id=13]
[ext_resource path="res://terrain/GateBlock.tscn" type="PackedScene" id=14]

[node name="Level1" type="Node2D"]
script = ExtResource( 13 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 224, 352 )
stream = ExtResource( 9 )
autoplay = true
max_distance = 1e+08
attenuation = 0.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 96 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -32
limit_top = -32
limit_right = 3584
limit_bottom = 384

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, -65508, 7, 0, -65507, 7, 0, -65506, 7, 0, -65505, 7, 0, -65504, 7, 0, -65503, 7, 0, -65502, 7, 0, -65501, 7, 0, -65500, 7, 0, -65499, 7, 0, -65498, 7, 0, -65497, 7, 0, -65496, 7, 0, -65495, 7, 0, -65494, 7, 0, -65493, 7, 0, -65492, 7, 0, -65491, 7, 0, -65490, 7, 0, -65489, 7, 0, -65488, 7, 0, -65487, 7, 0, -65486, 7, 0, -65485, 7, 0, -65484, 7, 0, -65483, 7, 0, -65482, 7, 0, -65481, 7, 0, -65480, 7, 0, -65479, 7, 0, -65478, 7, 0, -65477, 7, 0, -65476, 7, 0, -65475, 7, 0, -65474, 7, 0, -65473, 7, 0, -65472, 7, 0, -65471, 7, 0, -65470, 7, 0, -65469, 7, 0, -65468, 7, 0, -65467, 7, 0, -65466, 7, 0, -65465, 7, 0, -65464, 7, 0, -65463, 7, 0, -65462, 7, 0, -65461, 7, 0, -65460, 7, 0, -65459, 7, 0, -65458, 7, 0, -65457, 7, 0, -65456, 7, 0, -65455, 7, 0, -65454, 7, 0, -65453, 7, 0, -65452, 7, 0, -65451, 7, 0, -65450, 7, 0, -65449, 7, 0, -65448, 7, 0, -65447, 7, 0, -65446, 7, 0, -65445, 7, 0, -65444, 7, 0, -65443, 7, 0, -65442, 7, 0, -65441, 7, 0, -65440, 7, 0, -65439, 7, 0, -65438, 7, 0, -65437, 7, 0, -65436, 7, 0, -65435, 7, 0, -65434, 7, 0, -65433, 7, 0, -65432, 7, 0, -65431, 7, 0, -65430, 7, 0, -65429, 7, 0, -65428, 7, 0, -65427, 7, 0, -65426, 7, 0, -65425, 7, 0, 65535, 7, 0, 0, 37, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 36, 0, 12, 7, 0, 13, 7, 0, 14, 37, 0, 15, 10, 0, 16, 10, 0, 17, 36, 0, 18, 7, 0, 19, 7, 0, 20, 37, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 26, 10, 0, 27, 10, 0, 28, 10, 0, 29, 36, 0, 30, 7, 0, 31, 7, 0, 32, 7, 0, 33, 7, 0, 34, 37, 0, 35, 10, 0, 36, 10, 0, 37, 10, 0, 38, 10, 0, 39, 10, 0, 40, 10, 0, 41, 36, 0, 42, 7, 0, 43, 7, 0, 44, 37, 0, 45, 10, 0, 46, 10, 0, 47, 10, 0, 48, 10, 0, 49, 36, 0, 50, 7, 0, 51, 7, 0, 52, 7, 0, 53, 7, 0, 54, 7, 0, 55, 7, 0, 56, 7, 0, 57, 7, 0, 58, 7, 0, 59, 7, 0, 60, 7, 0, 61, 7, 0, 62, 7, 0, 63, 7, 0, 64, 7, 0, 65, 7, 0, 66, 7, 0, 67, 7, 0, 68, 37, 0, 69, 10, 0, 70, 10, 0, 71, 10, 0, 72, 10, 0, 73, 10, 0, 74, 10, 0, 75, 10, 0, 76, 10, 0, 77, 36, 0, 78, 7, 0, 79, 7, 0, 80, 7, 0, 81, 37, 0, 82, 10, 0, 83, 10, 0, 84, 10, 0, 85, 10, 0, 86, 10, 0, 87, 10, 0, 88, 10, 0, 89, 10, 0, 90, 10, 0, 91, 10, 0, 92, 10, 0, 93, 36, 0, 94, 37, 0, 95, 10, 0, 96, 10, 0, 97, 10, 0, 98, 10, 0, 99, 10, 0, 100, 10, 0, 101, 10, 0, 102, 10, 0, 103, 10, 0, 104, 10, 0, 105, 10, 0, 106, 10, 0, 107, 10, 0, 108, 10, 0, 109, 10, 0, 110, 36, 0, 111, 7, 0, 131071, 7, 0, 65536, 8, 0, 65547, 32, 0, 65548, 7, 0, 65549, 7, 0, 65550, 33, 0, 65553, 38, 0, 65554, 36, 0, 65555, 37, 0, 65556, 39, 0, 65565, 40, 0, 65566, 41, 0, 65567, 36, 0, 65568, 37, 0, 65569, 42, 0, 65570, 43, 0, 65577, 32, 0, 65578, 7, 0, 65579, 7, 0, 65580, 33, 0, 65585, 40, 0, 65586, 41, 0, 65587, 10, 0, 65588, 10, 0, 65589, 10, 0, 65590, 36, 0, 65591, 7, 0, 65592, 7, 0, 65593, 7, 0, 65594, 7, 0, 65595, 7, 0, 65596, 7, 0, 65597, 7, 0, 65598, 7, 0, 65599, 7, 0, 65600, 7, 0, 65601, 7, 0, 65602, 37, 0, 65603, 42, 0, 65604, 43, 0, 65613, 32, 0, 65614, 7, 0, 65615, 7, 0, 65616, 7, 0, 65617, 21, 0, 65629, 6, 0, 65630, 8, 0, 65646, 16, 0, 65647, 7, 0, 196607, 7, 0, 131072, 13, 0, 131083, 34, 0, 131084, 36, 0, 131085, 37, 0, 131086, 35, 0, 131090, 40, 0, 131091, 43, 0, 131103, 40, 0, 131104, 43, 0, 131113, 34, 0, 131114, 36, 0, 131115, 37, 0, 131116, 35, 0, 131126, 38, 0, 131127, 36, 0, 131128, 7, 0, 131129, 7, 0, 131130, 7, 0, 131131, 7, 0, 131132, 7, 0, 131133, 7, 0, 131134, 7, 0, 131135, 7, 0, 131136, 37, 0, 131137, 42, 0, 131138, 43, 0, 131149, 34, 0, 131150, 36, 0, 131151, 7, 0, 131152, 7, 0, 131153, 13, 0, 131165, 20, 0, 131166, 17, 0, 131182, 16, 0, 131183, 7, 0, 262143, 7, 0, 196608, 21, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 2, 0, 196620, 32, 0, 196621, 33, 0, 196650, 32, 0, 196651, 33, 0, 196663, 40, 0, 196664, 41, 0, 196665, 10, 0, 196666, 10, 0, 196667, 10, 0, 196668, 10, 0, 196669, 10, 0, 196670, 10, 0, 196671, 10, 0, 196672, 39, 0, 196686, 32, 0, 196687, 7, 0, 196688, 7, 0, 196689, 17, 0, 196701, 18, 0, 196702, 17, 0, 196718, 16, 0, 196719, 7, 0, 327679, 7, 0, 262144, 26, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 5, 0, 262156, 34, 0, 262157, 35, 0, 262186, 34, 0, 262187, 35, 0, 262222, 34, 0, 262223, 36, 0, 262224, 7, 0, 262225, 13, 0, 262237, 16, 0, 262238, 21, 0, 262254, 16, 0, 262255, 7, 0, 393215, 7, 0, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 33, 0, 327713, 0, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 327718, 1, 0, 327719, 2, 0, 327726, 0, 0, 327727, 1, 0, 327728, 1, 0, 327729, 1, 0, 327730, 1, 0, 327731, 1, 0, 327732, 1, 0, 327733, 1, 0, 327734, 1, 0, 327735, 2, 0, 327759, 32, 0, 327760, 7, 0, 327761, 8, 0, 327773, 16, 0, 327774, 17, 0, 327790, 16, 0, 327791, 7, 0, 458751, 7, 0, 393216, 7, 0, 393217, 7, 0, 393218, 7, 0, 393219, 37, 0, 393220, 35, 0, 393249, 3, 0, 393250, 4, 0, 393251, 4, 0, 393252, 4, 0, 393253, 4, 0, 393254, 4, 0, 393255, 5, 0, 393262, 3, 0, 393263, 4, 0, 393264, 4, 0, 393265, 4, 0, 393266, 4, 0, 393267, 4, 0, 393268, 4, 0, 393269, 4, 0, 393270, 4, 0, 393271, 5, 0, 393295, 34, 0, 393296, 10, 0, 393297, 11, 0, 393309, 16, 0, 393310, 19, 0, 393326, 16, 0, 393327, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 37, 0, 458755, 39, 0, 458769, 0, 0, 458770, 1, 0, 458771, 1, 0, 458772, 2, 0, 458785, 12, 0, 458786, 7, 0, 458787, 7, 0, 458788, 7, 0, 458789, 7, 0, 458790, 7, 0, 458791, 33, 0, 458798, 40, 0, 458799, 41, 0, 458800, 36, 0, 458801, 7, 0, 458802, 7, 0, 458803, 7, 0, 458804, 7, 0, 458805, 7, 0, 458806, 7, 0, 458807, 17, 0, 458815, 0, 0, 458816, 1, 0, 458817, 1, 0, 458818, 1, 0, 458819, 1, 0, 458820, 1, 0, 458821, 1, 0, 458822, 2, 0, 458845, 32, 0, 458846, 33, 0, 458862, 16, 0, 458863, 7, 0, 589823, 7, 0, 524288, 37, 0, 524289, 42, 0, 524290, 43, 0, 524305, 3, 0, 524306, 4, 0, 524307, 4, 0, 524308, 5, 0, 524317, 0, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 12, 0, 524322, 7, 0, 524323, 7, 0, 524324, 7, 0, 524325, 7, 0, 524326, 37, 0, 524327, 35, 0, 524330, 0, 0, 524331, 2, 0, 524336, 9, 0, 524337, 10, 0, 524338, 10, 0, 524339, 10, 0, 524340, 10, 0, 524341, 10, 0, 524342, 10, 0, 524343, 11, 0, 524351, 3, 0, 524352, 4, 0, 524353, 4, 0, 524354, 4, 0, 524355, 4, 0, 524356, 4, 0, 524357, 4, 0, 524358, 5, 0, 524367, 0, 0, 524368, 1, 0, 524369, 2, 0, 524381, 34, 0, 524382, 35, 0, 524387, 0, 0, 524388, 1, 0, 524389, 2, 0, 524398, 16, 0, 524399, 7, 0, 655359, 7, 0, 589824, 8, 0, 589841, 14, 0, 589842, 7, 0, 589843, 7, 0, 589844, 13, 0, 589853, 3, 0, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 589857, 27, 0, 589858, 7, 0, 589859, 7, 0, 589860, 7, 0, 589861, 7, 0, 589862, 33, 0, 589866, 3, 0, 589867, 5, 0, 589887, 16, 0, 589888, 7, 0, 589889, 7, 0, 589890, 7, 0, 589891, 7, 0, 589892, 7, 0, 589893, 7, 0, 589894, 33, 0, 589903, 3, 0, 589904, 4, 0, 589905, 5, 0, 589923, 3, 0, 589924, 4, 0, 589925, 5, 0, 589934, 16, 0, 589935, 7, 0, 720895, 7, 0, 655360, 8, 0, 655377, 20, 0, 655378, 7, 0, 655379, 7, 0, 655380, 8, 0, 655389, 6, 0, 655390, 7, 0, 655391, 7, 0, 655392, 7, 0, 655393, 7, 0, 655394, 7, 0, 655395, 7, 0, 655396, 7, 0, 655397, 37, 0, 655398, 35, 0, 655402, 12, 0, 655403, 13, 0, 655423, 16, 0, 655424, 7, 0, 655425, 7, 0, 655426, 7, 0, 655427, 7, 0, 655428, 7, 0, 655429, 37, 0, 655430, 35, 0, 655439, 14, 0, 655440, 7, 0, 655441, 17, 0, 655459, 12, 0, 655460, 7, 0, 655461, 8, 0, 655470, 16, 0, 655471, 7, 0, 786431, 7, 0, 720896, 8, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 16, 0, 720914, 7, 0, 720915, 7, 0, 720916, 17, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 6, 0, 720926, 7, 0, 720927, 7, 0, 720928, 7, 0, 720929, 7, 0, 720930, 7, 0, 720931, 7, 0, 720932, 7, 0, 720933, 17, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 12, 0, 720939, 13, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 720959, 16, 0, 720960, 7, 0, 720961, 7, 0, 720962, 7, 0, 720963, 7, 0, 720964, 7, 0, 720965, 17, 0, 720966, 0, 0, 720967, 0, 0, 720968, 0, 0, 720969, 0, 0, 720970, 0, 0, 720971, 0, 0, 720972, 0, 0, 720973, 0, 0, 720974, 0, 0, 720975, 14, 0, 720976, 7, 0, 720977, 17, 0, 720978, 0, 0, 720979, 0, 0, 720980, 0, 0, 720981, 0, 0, 720982, 0, 0, 720983, 0, 0, 720984, 0, 0, 720985, 0, 0, 720986, 0, 0, 720987, 0, 0, 720988, 0, 0, 720989, 0, 0, 720990, 0, 0, 720991, 0, 0, 720992, 0, 0, 720993, 0, 0, 720994, 0, 0, 720995, 12, 0, 720996, 7, 0, 720997, 8, 0, 720998, 1, 0, 720999, 1, 0, 721000, 1, 0, 721001, 1, 0, 721002, 1, 0, 721003, 1, 0, 721004, 1, 0, 721005, 1, 0, 721006, 16, 0, 721007, 7, 0, 851967, 7, 0, 786432, 26, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 27, 0, 786450, 7, 0, 786451, 7, 0, 786452, 26, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 4, 0, 786461, 27, 0, 786462, 7, 0, 786463, 7, 0, 786464, 7, 0, 786465, 7, 0, 786466, 7, 0, 786467, 7, 0, 786468, 7, 0, 786469, 26, 0, 786470, 4, 0, 786471, 4, 0, 786472, 4, 0, 786473, 4, 0, 786474, 27, 0, 786475, 26, 0, 786476, 4, 0, 786477, 4, 0, 786478, 4, 0, 786479, 4, 0, 786480, 4, 0, 786481, 4, 0, 786482, 4, 0, 786483, 4, 0, 786484, 4, 0, 786485, 4, 0, 786486, 4, 0, 786487, 4, 0, 786488, 4, 0, 786489, 4, 0, 786490, 4, 0, 786491, 4, 0, 786492, 4, 0, 786493, 4, 0, 786494, 4, 0, 786495, 27, 0, 786496, 7, 0, 786497, 7, 0, 786498, 7, 0, 786499, 7, 0, 786500, 7, 0, 786501, 26, 0, 786502, 4, 0, 786503, 4, 0, 786504, 4, 0, 786505, 4, 0, 786506, 4, 0, 786507, 4, 0, 786508, 4, 0, 786509, 4, 0, 786510, 4, 0, 786511, 27, 0, 786512, 7, 0, 786513, 26, 0, 786514, 4, 0, 786515, 4, 0, 786516, 4, 0, 786517, 4, 0, 786518, 4, 0, 786519, 4, 0, 786520, 4, 0, 786521, 4, 0, 786522, 4, 0, 786523, 4, 0, 786524, 4, 0, 786525, 4, 0, 786526, 4, 0, 786527, 4, 0, 786528, 4, 0, 786529, 4, 0, 786530, 4, 0, 786531, 27, 0, 786532, 7, 0, 786533, 26, 0, 786534, 4, 0, 786535, 4, 0, 786536, 4, 0, 786537, 4, 0, 786538, 4, 0, 786539, 4, 0, 786540, 4, 0, 786541, 4, 0, 786542, 27, 0, 786543, 7, 0, 917503, 7, 0, 851968, 7, 0, 851969, 7, 0, 851970, 7, 0, 851971, 7, 0, 851972, 7, 0, 851973, 7, 0, 851974, 7, 0, 851975, 7, 0, 851976, 7, 0, 851977, 7, 0, 851978, 7, 0, 851979, 7, 0, 851980, 7, 0, 851981, 7, 0, 851982, 7, 0, 851983, 7, 0, 851984, 7, 0, 851985, 7, 0, 851986, 7, 0, 851987, 7, 0, 851988, 7, 0, 851989, 7, 0, 851990, 7, 0, 851991, 7, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 851996, 7, 0, 851997, 7, 0, 851998, 7, 0, 851999, 7, 0, 852000, 7, 0, 852001, 7, 0, 852002, 7, 0, 852003, 7, 0, 852004, 7, 0, 852005, 7, 0, 852006, 7, 0, 852007, 7, 0, 852008, 7, 0, 852009, 7, 0, 852010, 7, 0, 852011, 7, 0, 852012, 7, 0, 852013, 7, 0, 852014, 7, 0, 852015, 7, 0, 852016, 7, 0, 852017, 7, 0, 852018, 7, 0, 852019, 7, 0, 852020, 7, 0, 852021, 7, 0, 852022, 7, 0, 852023, 7, 0, 852024, 7, 0, 852025, 7, 0, 852026, 7, 0, 852027, 7, 0, 852028, 7, 0, 852029, 7, 0, 852030, 7, 0, 852031, 7, 0, 852032, 7, 0, 852033, 7, 0, 852034, 7, 0, 852035, 7, 0, 852036, 7, 0, 852037, 7, 0, 852038, 7, 0, 852039, 7, 0, 852040, 7, 0, 852041, 7, 0, 852042, 7, 0, 852043, 7, 0, 852044, 7, 0, 852045, 7, 0, 852046, 7, 0, 852047, 7, 0, 852048, 7, 0, 852049, 7, 0, 852050, 7, 0, 852051, 7, 0, 852052, 7, 0, 852053, 7, 0, 852054, 7, 0, 852055, 7, 0, 852056, 7, 0, 852057, 7, 0, 852058, 7, 0, 852059, 7, 0, 852060, 7, 0, 852061, 7, 0, 852062, 7, 0, 852063, 7, 0, 852064, 7, 0, 852065, 7, 0, 852066, 7, 0, 852067, 7, 0, 852068, 7, 0, 852069, 7, 0, 852070, 7, 0, 852071, 7, 0, 852072, 7, 0, 852073, 7, 0, 852074, 7, 0, 852075, 7, 0, 852076, 7, 0, 852077, 7, 0, 852078, 7, 0, 852079, 7, 0 )

[node name="MovableBlocks" type="Node2D" parent="."]

[node name="Movable block" parent="MovableBlocks" instance=ExtResource( 7 )]
position = Vector2( 224, 352 )

[node name="Movable block2" parent="MovableBlocks" instance=ExtResource( 7 )]
position = Vector2( 1440, 352 )

[node name="ShootableBlocks" type="Node2D" parent="."]

[node name="ShootableBlock1" parent="ShootableBlocks" instance=ExtResource( 3 )]
position = Vector2( 2656, 64 )

[node name="ShootableBlock2" parent="ShootableBlocks" instance=ExtResource( 3 )]
position = Vector2( 2944, 64 )

[node name="ShootableBlock3" parent="ShootableBlocks" instance=ExtResource( 3 )]
position = Vector2( 2656, 192 )

[node name="ShootableBlock4" parent="ShootableBlocks" instance=ExtResource( 3 )]
position = Vector2( 2944, 192 )

[node name="ShootableBlock5" parent="ShootableBlocks" instance=ExtResource( 3 )]
position = Vector2( 2656, 352 )

[node name="Portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 3488, 352 )
level_sceen = "res://levels/Level2.tscn"

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Pies" type="Node2D" parent="."]

[node name="Pie" parent="Pies" instance=ExtResource( 6 )]
position = Vector2( 2577, 267 )

[node name="Pie2" parent="Pies" instance=ExtResource( 6 )]
position = Vector2( 3216, 267 )
type = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 338, 225 )

[node name="dirtBackground" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 320 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Instructions1" parent="." instance=ExtResource( 11 )]
position = Vector2( 128, 96 )

[node name="StoryBox" parent="Instructions1" instance=ExtResource( 10 )]
visible = false
margin_left = -96.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 288.0
story_line_file = "res://storyScripts/instructions1.txt"
person = ExtResource( 12 )

[node name="GateBlock" parent="." instance=ExtResource( 14 )]
position = Vector2( 2976, 288 )

[node name="Instructions2" parent="." instance=ExtResource( 11 )]
position = Vector2( 2592, 256 )

[node name="StoryBox" parent="Instructions2" instance=ExtResource( 10 )]
visible = false
margin_left = -384.0
margin_top = -224.0
margin_right = 384.0
margin_bottom = 32.0
story_line_file = "res://storyScripts/instructions2.txt"
person = ExtResource( 12 )
[connection signal="openGate" from="." to="GateBlock" method="_on_Level1_openGate"]
[connection signal="fire" from="Player" to="." method="_on_Player_fire"]
[connection signal="hit" from="ShootableBlocks/ShootableBlock1" to="." method="_on_ShootableBlock1_hit"]
[connection signal="hit" from="ShootableBlocks/ShootableBlock2" to="." method="_on_ShootableBlock2_hit"]
[connection signal="hit" from="ShootableBlocks/ShootableBlock3" to="." method="_on_ShootableBlock3_hit"]
[connection signal="hit" from="ShootableBlocks/ShootableBlock4" to="." method="_on_ShootableBlock4_hit"]
[connection signal="hit" from="ShootableBlocks/ShootableBlock5" to="." method="_on_ShootableBlock5_hit"]
[connection signal="pieCollected" from="Pies/Pie" to="HUD" method="_on_Pie1_pieCollected"]
[connection signal="pieCollected" from="Pies/Pie2" to="HUD" method="_on_Pie2_pieCollected"]
[connection signal="StoryBoxActive" from="Instructions1" to="Player" method="_on_StoryBoxActive"]
[connection signal="StoryBoxInactive" from="Instructions1" to="Player" method="_on_StoryBoxInactive"]
[connection signal="StoryBoxActive" from="Instructions2" to="Player" method="_on_StoryBoxActive"]
[connection signal="StoryBoxInactive" from="Instructions2" to="Player" method="_on_StoryBoxInactive"]
